--- a/week 5/online delivery app.html
+++ b/week 5/online delivery app.html
@@ -12,7 +12,7 @@
     <!-- Header -->
     <header>
         <div class="logo">
-            <h1>DeliverEase</h1>
+            <h1>Amazon</h1>
         </div>
         <div class="search-bar">
             <input type="text" placeholder="Search for products...">
